[package]
name = "ip2location"
version = "0.0.3"
authors = ["ArtemGr <artemciy@gmail.com>"]

description = "ip2location C library wrapper"
repository = "https://github.com/ArtemGr/ip2location.rs"
#readme = "README.md"
#keywords = ["web", "server"]
license = "Apache-2.0"

[lib]
name = "ip2location"
path = "ip2location.rs"
doctest = false
test = false
bench = false

[dependencies]
gstuff = "0.6"
libc = "0.2"

[dev-dependencies]
power-assert = "0.3"
